Refactor IndexServlet to some point